--- a/vegas_lines/Gemfile
+++ b/vegas_lines/Gemfile
@@ -6,7 +6,7 @@ gem 'rails', '3.1.3'
 # gem 'rails',     :git => 'git://github.com/rails/rails.git'
 
 gem 'mysql2'
-gem 'devise'
+gem 'devise', '1.4.7'
 
 
 # Gems used only for assets and not required
